# croptopus

./: .gitignore  README.md  example_sketch.ino  lora_example_sketch.ino
bbb-listener/: .env.example  .gitignore  forwarder.py  lora_listener.py  pyproject.toml
bbb-listener/tools/: inject_fake_uplink.py
manifest-builder/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  manifest.py  pyproject.toml  pytest.ini  requirements.txt
manifest-builder/applier/: __init__.py  apply.py  apply_log.py  config.py  errors.py  interfaces.py  model.py  plan.py  state.py
manifest-builder/applier/grafana/: __init__.py  dashboard_applier.py  dashboard_library.py  org_applier.py
manifest-builder/applier/grafana/templates/: device_health.json  overview.json  per_station.json
manifest-builder/applier/timescale/: __init__.py  schema_applier.py
manifest-builder/examples/: example_manifest.yaml
manifest-builder/saved/: croptopus_dev.yaml
manifest-builder/static/: style.css
manifest-builder/templates/: apply_result.html  base.html  editor.html  history.html  index.html  plan.html  status.html
manifest-builder/tests/: conftest.py  test_integration.py  test_plan.py
server/: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
server/db/: Dockerfile
server/grafana/: Dockerfile
server/ingester/: Dockerfile  pyproject.toml
server/ingester/app/: auth.py  db.py
server/ingester/croptopus_ingester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/ingester/tests/: test_ingest.py
xiao-station-flasher/: flash_xiao_station.sh  setup_arduino_cli.sh
(+5 files in other folders)
